commit#A new code is entered

--- a/orders.html
+++ b/orders.html
@@ -1,5 +1,2 @@
-Hello all....Welcome to orders page
-select your order 
-order now 
-Thank you .....
-New changes done by the developer1 .....
+<h1>Hello  All.....welcome to orders page</h1>
+Thank you
